create MQ producer